--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title> Test </title>
+	<title> Test <title>
 </head>
 <body>
 	<p> Hello World! </p>
 	<p> yay am using github </p>
+	
 </body>
 </html>
